fix z-index make pronunciation disappear in word recite

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -297,7 +297,6 @@ html {
 .accent {
   position: relative;
   white-space: nowrap;
-  z-index: -1;
 }
 .accent:after {
   content: "";
