--- a/src/styl/_japan.styl
+++ b/src/styl/_japan.styl
@@ -14,7 +14,6 @@
 .accent
   position relative
   white-space nowrap
-  z-index -1
 
   &:after
     content ""
